<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home"
        android:title="@string/text_home" />
    <item
        android:id="@+id/action_merchant"
        android:icon="@drawable/ic_order"
        android:title="@string/text_order" />

    <item
        android:id="@+id/action_appointment"
        android:icon="@drawable/ic_appointment"
        android:title="@string/text_appointment" />

    <item
        android:id="@+id/action_cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/text_cart" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/text_settings" />

</menu>