<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:local="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Address.ActivityFillAddress">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        local:titleTextColor="@color/white">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_home" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/add_address"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/cust_edit_text"
                android:hint="@string/mobile_number"
                android:inputType="number"
                android:maxLength="10"
                android:paddingStart="10dp"
                android:textColor="@color/txtColor"
                android:textColorHint="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/cust_edit_text"
                android:hint="@string/full_name"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textColor="@color/txtColor"
                android:textColorHint="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_address1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/cust_edit_text"
                android:hint="@string/address_1"
                android:inputType="text"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:paddingStart="10dp"
                android:textColor="@color/txtColor"
                android:textColorHint="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_address2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/cust_edit_text"
                android:hint="@string/address_2"
                android:inputType="text"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:paddingStart="10dp"
                android:textColor="@color/txtColor"
                android:textColorHint="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_landmark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/cust_edit_text"
                android:hint="@string/land_mark"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textColor="@color/txtColor"
                android:textColorHint="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/et_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/cust_edit_text"
                android:text="@string/state"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <AutoCompleteTextView
                android:id="@+id/et_City"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/cust_edit_text"
                android:hint="@string/city"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textColor="@color/txtColor"
                android:textColorHint="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_pin_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/cust_edit_text"
                android:hint="@string/pin_code"
                android:inputType="number"
                android:maxLength="6"
                android:paddingStart="10dp"
                android:textColor="@color/txtColor"
                android:textColorHint="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_address_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/cust_edit_text"
                android:hint="@string/address_type"
                android:paddingStart="10dp"
                android:gravity="center_vertical"
                android:textColor="@color/txtColor"
                android:textColorHint="@color/black"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/cb_default"
                android:text="@string/cb_default"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/ripple_button_effect"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>