<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/select_country"
            android:textColor="@color/white" />


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/rl_query_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <EditText
            android:layout_weight="9"
            android:id="@+id/editText_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint"
            android:imeOptions="actionSearch"
            android:singleLine="true"
            android:inputType="textNoSuggestions"
            android:textColor="@android:color/primary_text_light_nodisable"
            android:autofillHints="" />

        <ImageView
            android:id="@+id/img_clear_query"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ic_backspace"
            android:clickable="true"
            android:tint="@color/colorPrimaryDark"
            android:focusable="true" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_countryDialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_query_holder"
        android:dividerHeight="2dp" />



    <TextView
        android:id="@+id/textView_noresult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_query_holder"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/no_result_found"
        android:textColor="@android:color/primary_text_light"
        android:visibility="gone" />

</RelativeLayout>