<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="6dp"
            app:cardElevation="0dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/header_icon"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:tint="@color/colorPrimaryDark"
                    app:srcCompat="@drawable/ic_logo" />


                <EditText
                    android:id="@+id/edt_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/cust_round_dark_edt"
                    android:drawableStart="@drawable/ic_mobile"
                    android:drawableTint="@color/white"
                    android:drawablePadding="10dp"
                    android:hint="@string/mobile_no"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:textColor="@color/white"
                    android:paddingStart="20dp"
                    android:singleLine="true"
                    android:textColorHint="@color/white"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />


                <LinearLayout
                    android:id="@+id/ll_check_box"
                    android:layout_width="match_parent"
                    android:layout_below="@+id/edt_mobile"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/chk_agree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorPrimaryDark"
                        android:text="ACCEPT"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txt_terms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="TERMS AND CONDITIONS"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="14sp" />

                </LinearLayout>



                <LinearLayout
                    android:layout_below="@+id/ll_check_box"
                    android:orientation="horizontal"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btn_continue"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/cust_button_color"
                        android:text="@string/btn_continue"
                        android:textSize="16sp"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/txt_skip"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_margin="5dp"
                        android:layout_height="45dp"
                        android:background="@drawable/cust_button_color"
                        android:gravity="center"
                        android:text="@string/btn_skip"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <TextView
        android:id="@+id/tv_tv_distance"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center"
        android:text="SOCIAL DISTANCING APP USES SPACE TO SAVE LIVES"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />

</RelativeLayout>
