<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        xmlns:local="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolColor"
        android:backgroundTint="@color/toolColor"
        local:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
        local:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        local:title="OTP Verification"
        local:titleTextColor="@color/white" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_Display_mobile_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/otp_send_on"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextone"
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:digits="0123456789"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="1"
                    android:nextFocusRight="@+id/editText_two"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/editTexttwo"
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/black" />


                <EditText
                    android:id="@+id/editTextthree"
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/black" />


                <EditText
                    android:id="@+id/editTextfour"
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/black" />


            </LinearLayout>


        </LinearLayout>

        <EditText
            android:id="@+id/edt_otp"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="5dp"
            android:digits="0123456789"
            android:gravity="center"
            android:imeOptions="actionNext"
            app:backgroundTint="@color/colorPrimary"
            android:inputType="number"
            android:maxLength="4"
            android:nextFocusRight="@+id/editText_two"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_verify"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:paddingStart="10dp"
                android:drawableStart="@drawable/ic_verified"
                android:drawableTint="@color/white"
                android:background="@drawable/ripple_button"
                android:text="@string/btn_verify"
                android:textColor="@color/white"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:background="@drawable/ripple_button"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:src="@drawable/ic_resend"
                android:tint="@color/txtColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_link_Resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:text="@string/btn_resend"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/txtColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="00"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>